# langhchain

./: .env.example  .gitignore  01_ejemplo_simple.py  02_ejemplo_langgraph_agentes.py  03_ejemplo_memoria.py  04_ejemplo_vectordb.py  05_ejemplo_ollama.py  05_wikipedia_rag.py  README.md  api.py  compose.yml  frontend.html  index.html  presentacion.html  presentacion_local_rag.html  presentacion_poetry.html  presentacion_vectordb.html  pyproject.toml  requirements.txt  test_api.py
documentos/: tecnologias.txt
huggingface_rag/: 01_simple_example.py  config.py  ingestion.py  main.py  models.py  rag_chain.py
local_rag/: __init__.py  agent.py  api.py  config.py  ingestion.py
openai_rag/: __init__.py  agent.py  api.py  config.py  ingestion.py
wikipedia_rag/: __init__.py  __main__.py  agent.py  config.py  main.py  models.py  scraper.py  vectorstore.py
